--- a/404.html
+++ b/404.html
@@ -1,40 +1,30 @@
 <html>
-<head>
-<title>404</title>
-<link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
-<style>
-h1{
-font-size:80px;
-font-weight:800;
-text-align:center;
-font-family: 'Roboto', sans-serif;
-}
-h2
-{
-font-size:25px;
-text-align:center;
-font-family: 'Roboto', sans-serif;
-margin-top:-40px;
-}
-p{
-text-align:center;
-font-family: 'Roboto', sans-serif;
-font-size:12px;
-}
-
-.container
-{
-width:300px;
-margin: 0 auto;
-margin-top:15%;
-}
-</style>
-</head>
-<body>
-<div class="container">
-<h1>404</h1>
-<h2>Page Not Found</h2>
-<p>The Page you are looking for doesn't exist or an other error occured. Go to <a href="">Home Page.</a></p>
-</div>
-</body>
+    <head>
+        <title>404</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    </head>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <img src="img/fusekit-text-nav-logo.png" height="28" alt="FuseKitLogo">
+        </div>
+    </nav>
+    <body>
+        <div id='backgroundImage'>
+            <div className="col-md-7 align-self-center text-center text-md-left">
+                <div id="wrap">
+                    <div id="content">
+                        <h1>Planned maintenance in progress.</h1>
+                        <p class="lead mt-3 mb-2 mb-md-7 w-80">It appears that the FuseKit Team is hard at work. We apologize for the<br> inconvenience. We'll be back up shortly.</p>
+                    </div>
+                </div>
+            <div class='container'>
+                <div id="particles-js"></div>
+                <script type="text/javascript" src="js/particles.min.js"></script>
+                <script type="text/javascript" src="js/app.js"></script>
+            </div>
+        </div>
+    </body>
 </html>
