Adding changes that should have happened earlier

--- a/404.html
+++ b/404.html
@@ -13,18 +13,17 @@
     </nav>
     <body>
         <div id='backgroundImage'>
-            <div className="col-md-7 align-self-center text-center text-md-left">
-                <div id="wrap">
-                    <div id="content">
+            <div class="container h-100">
+                <div class="row h-100 justify-content-center align-items-center">
+                    <div class=" align-self-center text-center">
                         <h1>Planned maintenance in progress.</h1>
-                        <p class="lead mt-3 mb-2 mb-md-7 w-80">It appears that the FuseKit Team is hard at work. We apologize for the<br> inconvenience. We'll be back up shortly.</p>
+                        <p class="lead mt-3 mb-2 mb-md-7 w-80 align-self-center text-center text-md-left">It appears that the FuseKit Team is hard at work. We apologize for the<br> inconvenience. We'll be back up shortly.</p>
                     </div>
                 </div>
-            <div class='container'>
-                <div id="particles-js"></div>
-                <script type="text/javascript" src="js/particles.min.js"></script>
-                <script type="text/javascript" src="js/app.js"></script>
             </div>
+            <div id="particles-js"></div>
+            <script type="text/javascript" src="js/particles.min.js"></script>
+            <script type="text/javascript" src="js/app.js"></script>
         </div>
     </body>
 </html>
